--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lodash": "^4.17.21",
     "pinia": "^2.0.13",
     "sass": "^1.51.0",
+    "swiper": "^8.1.4",
     "vue": "^3.2.33",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
